Table merchants {
  id          uuid              [pk]
  name        varchar(255)      [not null]
  email       varchar(255)      [not null, unique]
  webhook_url varchar(500)      [null]
  status      merchant_status   [not null, default: "pending"]
  created_at  timestamp         [not null, default: `now()`]
  updated_at  timestamp         [not null, default: `now()`]
}

Enum merchant_status {
  pending
  active
  suspended
}

Table api_keys {
  id          uuid        [pk]
  merchant_id uuid        [not null, ref: > merchants.id]
  key_prefix  varchar(16) [not null]        // แสดงให้ merchant เห็น เช่น "pk_live_a1b2..."
  hashed_key  varchar(255) [not null, unique]
  revoked_at  timestamp   [null]
  created_at  timestamp   [not null, default: `now()`]
}

Table transactions {
  id              uuid              [pk]
  merchant_id     uuid              [not null, ref: > merchants.id]
  gateway_ref     varchar(255)      [null]
  payment_type    payment_type      [not null]
  card_token      varchar(255)      [not null]
  card_last_four  varchar(4)        [not null]
  card_brand      varchar(20)       [not null]
  amount          bigint            [not null]
  currency        varchar(3)        [not null, default: "THB"]
  status          transaction_status [not null, default: "pending"]
  description     varchar(500)      [null]
  idempotency_key varchar(255)      [null, unique]
  failed_reason   varchar(500)      [null]
  captured_at     timestamp         [null]
  created_at      timestamp         [not null, default: `now()`]
  updated_at      timestamp         [not null, default: `now()`]

  indexes {
     (id, merchant_id) [name: 'idx_transactions_merchant_id']
     (id, status) [name: 'idx_transactions_status']
     (id, gateway_ref) [name: 'idx_transactions_gateway_ref']
     (id, created_at) [name: 'idx_transactions_created_at']
  }
}

Enum transaction_status {
  pending
  authorized
  captured
  failed
  voided
  refunded
}

Enum payment_type {
  direct_charge
  authorize_capture
}

Table idempotency_keys {
  key         uuid  [pk]
  merchant_id uuid          [not null, ref: > merchants.id]
  response    jsonb         [not null]
  created_at  timestamp     [not null, default: `now()`]
  expires_at  timestamp     [not null]

  indexes {
    (key, merchant_id) [name: 'idx_idempotency_merchant_id']
    (key, expires_at) [name: 'idx_idempotency_expires_at']
  }
}

Table refunds {
  id             uuid          [pk]
  transaction_id uuid          [not null, ref: > transactions.id]
  merchant_id    uuid          [not null, ref: > merchants.id]
  refund_ref     varchar(255)  [null]
  amount         bigint        [not null]
  status         refund_status [not null, default: "processing"]
  failed_reason  varchar(500)  [null]
  created_at     timestamp     [increment ,not null, default: `now()`]
  updated_at     timestamp     [not null, default: `now()`]

  indexes {
    (refund_ref) [name: 'idx_refunds_refund_ref']
    (transaction_id) [name: 'idx_refunds_transaction_id']
  }
}

Enum refund_status {
  processing
  completed
  failed
}